--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <section class="section section_intro">
                     <div class="sign">
-                        <button class="sign__button">Записаться на прием</button>
+                        <a href="./write-to-us.html" class="sign__button">Записаться на прием</a>
                     </div>
                     <div class="examination">
                         <div class="examination__inner">
@@ -41,7 +41,7 @@
                             <p class="examination__paragraph">Диспансеризация проводится:<br>
                                 1 раз в три года в возрасте от 18 до 39 лет включительно;
                                 ежегодно в возрасте 40 лет и старше</p>
-                            <button class="examination__button">Узнать больше</button>
+                            <a href="./prophylaxy.html" class="examination__button">Узнать больше</a>
                         </div>
                         <div class="examination__pic"></div>
                     </div>
